# Test

./: .eslintrc.js  .gitignore  .npmrc  .prettierignore  .prettierrc.js  .stylelintrc.js  CHANGELOG.md  Dockerfile  README.md  babel.config.js  build.js  docker-log  index.html  model.ts  mrn.config.js  package.json  preloadedModules.js  pyproject.toml  run-demo.sh  run.sh  test.py  tsconfig.json  任务描述样例.md  初步思路.md  明天.md  更多可扩展的点.md  系统提示词.md
.build-crewai/: Dockerfile  uv-installer.sh
generates/: LanguageTranslation.json
kofa-prompts/: 任务拆分和智能体设计.md  优化版提示词.md
kofa-prompts/v2/: flow 提示词-v2.md  flow 提示词.md  flow.md  拆分系统提示词.md
src/: __types__.py  app.json  app.ts  app_mrn.tsx  generate_json_file.py  global.css  main.py  streaming.py  test.py  tools.py  typings.d.ts
src/__templates__/hierarchical/: agent.yaml  task.yaml
src/components/Banner/: index.scss  index.tsx
src/components/Logo/: index.module.scss  index.tsx
src/pages/Home/: index.module.scss  index.tsx
