[project]
name = "generate_crewai"
version = "0.1.0"
description = "generate_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "fastapi[standard]>=0.115.12",
]

[project.scripts]
generate_crewai = "generate_crewai.main:run"
run_crew = "generate_crewai.main:run"
train = "generate_crewai.main:train"
replay = "generate_crewai.main:replay"
test = "generate_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
